[package]
name = "flaky-test"
version = "0.1.0"
edition = "2021"
authors = [ "Oliver Tale-Yazdi" ]
description = "Detect and investigate unreliable Rust tests."
license = "GPL-3.0-only"
repository = "https://github.com/ggwpez/flaky-test"

[dependencies]
anyhow = "1.0.82"
camino = "1.1.6"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
futures = "0.3.30"
log = "0.4.21"
rand = "0.8.5"
rand_distr = "0.4.3"
tokio = { version = "1.37.0", features = ["full"] }
